--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pandas>=1.1.4
 seaborn>=0.11.0
 requests
 gdown
+imageio
 # Export --------------------------------------
 # coremltools>=4.1  # CoreML export
 # onnx>=1.9.0  # ONNX export
