--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ requests
 gdown
 imageio
 sklearn
+skimage
 # Export --------------------------------------
 # coremltools>=4.1  # CoreML export
 # onnx>=1.9.0  # ONNX export
