--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ requests
 gdown
 imageio
 sklearn
-skimage
+scikit-image
 # Export --------------------------------------
 # coremltools>=4.1  # CoreML export
 # onnx>=1.9.0  # ONNX export
