--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ gdown
 imageio
 sklearn
 scikit-image
+keras
 # Export --------------------------------------
 # coremltools>=4.1  # CoreML export
 # onnx>=1.9.0  # ONNX export
