--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ imageio
 sklearn
 scikit-image
 keras
+tensorflow
 # Export --------------------------------------
 # coremltools>=4.1  # CoreML export
 # onnx>=1.9.0  # ONNX export
