--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ sklearn
 scikit-image
 keras
 tensorflow
+gtts
 # Export --------------------------------------
 # coremltools>=4.1  # CoreML export
 # onnx>=1.9.0  # ONNX export
